# RoboVision-Agent

./: .env.example  .gitignore  ANALYSIS.md  CODEX_PROMPT_MULTI_AGENT.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.py
.github/workflows/: ci.yml
app/: __init__.py  agent.py  config.py  constants.py  contracts.py  main.py
app/agents/: __init__.py  agents.py  db.py  graph.py  linkage.py  notifications.py  samples.py
app/core/: __init__.py  event_logger.py  media_router.py
app/llm/: __init__.py  deepseek_client.py  llm_client.py
app/rag/: __init__.py  document_loader.py  prompt_builder.py  rag_tool.py  vector_store.py
app/runtime/: __init__.py  fire_alarm_rules.py  (+1 more)
configs/: agent_config.yaml  model_config.yaml
core/: __init__.py  agents.py  db.py  graph.py  mock.py
demo/: README.md
scripts/: benchmark.py  check_model_classes.py  check_video_frames.py  debug_fire_detection.py  debug_fire_detection2.py  demo_smoke.py  doctor.py  download_models.py  evaluate_agent.py  evaluate_rag.py  export_onnx.py  test_prompts.py  test_rag.py  test_rag_acceptance.py  train_yolo.py
tests/: conftest.py  test_agent.py  test_agent_evaluation.py  test_agent_orchestrator.py  test_agents.py  test_db.py  test_download_models.py  test_fire_alarm.py  test_graph.py  test_integration.py  test_llm_client.py  test_parse_intent.py  test_ppe_rules.py  test_rag.py  test_ui_detection.py  test_ui_disposal.py  test_ui_log.py  test_ui_rag.py  test_ultralytics_patch.py  test_utils.py  test_video_detection.py
ui/: __init__.py  disposal_tab.py
weights/: README.md
(+31 files in other folders)
