[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "model: requires local model weights and performs real inference",
    "llm: requires a configured external or local LLM service",
    "ui: builds Gradio components; run manually because initial Gradio startup is comparatively slow",
]

[project]
name = "robovision-agent"
version = "0.1.0"
description = "Multi-tool computer vision AI agent for industrial safety monitoring"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "imageio-ffmpeg>=0.6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "ultralytics>=8.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "ruff>=0.9.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["app*"]
